# git-grab

./: .cirrus.yml  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  git-grab.1
src/: args.rs  clipboard.rs  grab.rs  main.rs  pattern.rs
src/clipboard/: providers.rs
