[package]
name = "git-grab"
authors = ["Wesley Moore <wes@wezm.net>"]
version = "3.0.0"
edition = "2018"

homepage = "https://github.com/wezm/git-grab"
repository = "https://github.com/wezm/git-grab.git"

readme = "README.md"
license = "MIT OR Apache-2.0"

description = "A tool to clone git repositories to a standard location, organised by domain name and path"
keywords = ["git", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
home = "0.5.3"
pico-args = "0.5.0"
url = "2.2.2"

[target.'cfg(target_family = "windows")'.dependencies]
clipboard-win = { version = "5.3.1", optional = true }

[features]
default = ["clipboard"]
# Ideally this would only be present on windows
# Requires target dependant features:
# https://github.com/rust-lang/cargo/issues/1197
clipboard = ["dep:clipboard-win"]

